[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/PhysiGun/PhysiGun.gd" type="Script" id=1]

[node name="PhysiGun" type="Node2D"]
script = ExtResource( 1 )
bullet_speed = 500

[node name="sprite" type="ColorRect" parent="."]
margin_top = -2.0
margin_right = 20.0
margin_bottom = 2.0
color = Color( 0, 0, 0, 1 )

[node name="bullet_container" type="Node" parent="."]

[node name="bullet_spawnpoint" type="Position2D" parent="."]
position = Vector2( 20, 0 )
